@@ -1,3 +1,10 @@
+1998-01-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* HeatbugObserverSwarm.m ([HeatbugObserverSwarm -buildObjects]): Use
+	SET_WINDOW_GEOMETRY_RECORD_NAME for worldRaster and unhappyGraph.
+
+	* main.m (main): Likewise, but for theTopLevelSwarm.
+
 1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* HeatbugObserverSwarm.m ([HeatbugObserverSwarm -graphBug:]): 
